--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.10",
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.6",
     "react-router-dom": "^7.9.5",
