--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.6",
     "react-router-dom": "^7.9.5",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
